--- a/functions.ipynb
+++ b/functions.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "def label_preprocess(data: pd.Series):\n",
-    "    return np.array([data.iloc[1:-1].to_numpy()]).astype(np.float32)"
+    "    return np.array([data.iloc[1:].to_numpy()]).astype(np.float32)"
    ]
   },
   {
@@ -70,19 +70,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prep_data(data: pd.DataFrame, test_size: float = 0.2, val_size: float = 0.5):\n",
+    "def prep_data(data: pd.DataFrame, test_size: float = 0.2, val_size: float = 0.5, number_of_galaxies: int = 5000):\n",
     "    def make_dataset(data: pd.DataFrame):\n",
-    "        data[\"image\"] = data[\"GalaxyID\"].apply(lambda x: image_preprocess(x))\n",
-    "        data[\"label\"] = data.apply(lambda x: label_preprocess(x), axis=1)\n",
+    "        labels = data.apply(lambda x: label_preprocess(x), axis=1)\n",
+    "        images = data[\"GalaxyID\"].apply(lambda x: image_preprocess(x))\n",
     "\n",
-    "        input_data = torch.Tensor(np.stack(data[\"image\"].to_numpy())).permute(0, 3, 1, 2).to(DEVICE)\n",
-    "        output_data = torch.Tensor(np.stack(data[\"label\"].to_numpy())).squeeze(1).to(DEVICE)\n",
+    "        input_data = torch.Tensor(np.stack(images.to_numpy())).permute(0, 3, 1, 2).to(DEVICE)\n",
+    "        output_data = torch.Tensor(np.stack(labels.to_numpy())).squeeze(1).to(DEVICE)\n",
     "\n",
     "        dataset = torch.utils.data.TensorDataset(input_data, output_data)\n",
     "        return dataset\n",
     "\n",
     "    # Split data into train and test\n",
-    "    train_data, test_data = train_test_split(data, test_size=test_size)\n",
+    "    train_data, test_data = train_test_split(data.sample(number_of_galaxies), test_size=test_size)\n",
     "    test_data, val_data = train_test_split(test_data, test_size=val_size)\n",
     "\n",
     "    # Create training dataset\n",
@@ -175,6 +175,52 @@
     "        test_losses.append(test_loss)\n",
     "\n",
     "    return train_losses, test_losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def break_out_solution(solutions):\n",
+    "    # Convert to numpy\n",
+    "    solutions = solutions.cpu().detach().numpy()\n",
+    "\n",
+    "    # Columns 1-3 are class 1\n",
+    "    class1 = np.argmax(solutions[:, :3], axis=1)\n",
+    "\n",
+    "    # Columns 4-5 are class 2\n",
+    "    class2 = np.argmax(solutions[:, 4:6], axis=1)\n",
+    "\n",
+    "    # Columns 6-7 are class 3\n",
+    "    class3 = np.argmax(solutions[:, 6:8], axis=1)\n",
+    "\n",
+    "    # Columns 8-9 are class 4\n",
+    "    class4 = np.argmax(solutions[:, 8:10], axis=1)\n",
+    "\n",
+    "    # Columns 10-13 are class 5\n",
+    "    class5 = np.argmax(solutions[:, 10:14], axis=1)\n",
+    "\n",
+    "    # Columns 14-15 are class 6\n",
+    "    class6 = np.argmax(solutions[:, 14:16], axis=1)\n",
+    "\n",
+    "    # Columns 16-18 are class 7\n",
+    "    class7 = np.argmax(solutions[:, 16:19], axis=1)\n",
+    "\n",
+    "    # Columns 19-25 are class 8\n",
+    "    class8 = np.argmax(solutions[:, 19:26], axis=1)\n",
+    "\n",
+    "    # Columns 26-28 are class 9\n",
+    "    class9 = np.argmax(solutions[:, 26:29], axis=1)\n",
+    "\n",
+    "    # Columns 29-31 are class 10\n",
+    "    class10 = np.argmax(solutions[:, 29:32], axis=1)\n",
+    "\n",
+    "    # Columns 32-37 are class 11\n",
+    "    class11 = np.argmax(solutions[:, 32:37], axis=1)\n",
+    "\n",
+    "    return [class1, class2, class3, class4, class5, class6, class7, class8, class9, class10, class11]"
    ]
   }
  ],
