Update default argument of prep data

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -70,7 +70,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prep_data(data: pd.DataFrame, test_size: float = 0.2, val_size: float = 0.5, number_of_galaxies: int = 5000):\n",
+    "def prep_data(data: pd.DataFrame, test_size: float = 0.2, val_size: float = 0.5, number_of_galaxies: int = None):\n",
+    "    # Handle number of galaxies\n",
+    "    number_of_galaxies = len(data) if number_of_galaxies is None else number_of_galaxies\n",
+    "\n",
     "    def make_dataset(data: pd.DataFrame):\n",
     "        labels = data.apply(lambda x: label_preprocess(x), axis=1)\n",
     "        images = data[\"GalaxyID\"].apply(lambda x: image_preprocess(x))\n",
